# Coursework.-Racing-simulator

./: CMakeLists.txt  main.cpp
RS_Classes/: airrace.cpp  airrace.h  airvehicle.cpp  airvehicle.h  anyrace.cpp  anyrace.h  at_boots.cpp  at_boots.h  broom.cpp  broom.h  camel.cpp  camel.h  carpetplane.cpp  carpetplane.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  groundrace.cpp  groundrace.h  groundvehicle.cpp  groundvehicle.h  hs_camel.cpp  hs_camel.h  vehicle.cpp  vehicle.h
